Fixed list-page-nav LI spacing and bump version 2.0.122

--- a/src/scss/components/list_page/nav.scss
+++ b/src/scss/components/list_page/nav.scss
@@ -3,8 +3,8 @@
   height: 100%;
   overflow-y: auto;
 
-  li.is-group {
-    margin: 10px 0;
+  li {
+    margin: 0 0 10px;
     padding: 0;
   }
 }
